--- a/views/results.erb
+++ b/views/results.erb
@@ -1,5 +1,5 @@
 <!-- views/results.erb -->
-
+<div class="results" id="active">
 <ul>
 	<% @sorted_result.each do |movie| %>
 	   <li>
@@ -8,3 +8,4 @@
 	   </li>
 	<% end %>
 </ul>
+</div>
