--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,31 +1,51 @@
 /*  public/stylesheet/stye.css  */
 
-.row{
+body	{
+	margin: 0;
+}
+
+
+/*  SEARCH  */
+.navbar-fixed-top{
    width: 100%;
    text-align: center;
    float: center;
    background-size: cover;
+   background-color: white
 }
 
-#results	{
-	background: rgba(29,54,87,1);
-	background-size: cover;
-    margin-top: 200px;
-
-}
-
- input[type="text"]  {
-      /*background: rgba(29,54,87,1);*/
-      color: gray;
-      text-align: left;
-      font-size: 55px; 
-      padding: 10px;
-      border: 0;
-      margin-top: 15%;
-      margin-left: 5%;
-    }
-
- input[type="text"]:hover  {
+input[type="text"]  {
   /*background: rgba(29,54,87,1);*/
-  color: rgba(100,182,237,1);
+  color: gray;
+  text-align: left;
+  font-size: 55px; 
+  padding: 10px;
+  border: 0;
+  margin-top: 15%;
+  margin-left: 5%;
+}
+
+
+
+input[type="text"]:focus  {
+  outline: none;
+  color: rgba(100,182,237,1)
+}
+
+/*  RESULTS  */
+.results	{
+	padding: 10px 0px 10px 0px;
+	background: rgba(255,255,255,1);	
+    margin: 80px 0px -500px 0px;
+    width: 0 auto;
+}
+
+#active	{
+	background: rgba(29,54,87,1);
+}
+
+
+a {
+	color: white;
+	text-decoration: none;	
 }
