--- a/views/movie.erb
+++ b/views/movie.erb
@@ -3,5 +3,5 @@
 <h1><%@result2['Title']%></h1>
 
 <!-- for some reason the image is not showing -->
-<h2><img src='<%@result2['Poster']%>'><h2>
+<h2><img src='<%= @result2['Poster']%>'><h2>
 <p><a href="/imdbid/<%= @result2['imdbID']%>">IMDB</a></<p>
