--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,10 +10,8 @@
 	</head>
 
 	<body>
-		<div class="container">
+		<div class="container-fluid">
 			<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-			  <h1></h1>
-			  
 			  <form accept-charset="UTF-s8" action="/results" method="post">
 			    <!-- <label for="movie">Search for:</label> -->
 			    <input id="movie" name="movie" type="text" placeholder="search for any movie" />
