--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,28 +1,77 @@
 /*  public/stylesheet/stye.css  */
 
+/** Eric Meyer's Reset CSS v2.0 (http://meyerweb.com/eric/tools/css/reset/) http://cssreset.com */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/*-------------------------------------------------------------------------*/
+
+
+/*  ALL  */
+
 body, html, .container-fluid	{
-	height: 100%
+	height: 100%;
+  width: 100%;
 
 }
 
-
 /*  SEARCH  */
-.navbar{
-   width: 100%;
-   text-align: center;
-   float: center;
-   background-size: cover;
-   background-color: white
+.navbar-fixed-top {
+  text-align: center;
+  background-color: white;
+  border-color: white;
+  height: 230px;
 }
 
 input[type="text"]  {
   color: gray;
   text-align: left;
-  font-size: 55px; 
+  font-size: 4em; 
   padding: 10px;
   border: 0;
-  margin-top: 15%;
-  margin-left: 5%;
+  margin-top: 100px;
+  
 }
 
 input[type="text"]:focus  {
@@ -32,14 +81,15 @@ input[type="text"]:focus  {
 
 /*  RESULTS  */
 .results	{
+  padding-top: 250px;
   height:100%;
   width: 100%;
   background: rgba(29,54,87,1);
-/*	padding: 10px 0px 10px 0px;
-  margin: 80px 0px -500px 0px;*/
 }
 
 a {
 	color: white;
 	text-decoration: none;	
+  font-size: 1em;
+  padding: 10px;
 }
