--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,20 +5,21 @@
 <html>
 	<head>
 		<title>Search For a Movie</title>
+		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css<http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css>" rel="stylesheet">
 	</head>
 
 	<body>
-		<div class="container-fluid">
-			<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<div class="container">
+			<nav class="navbar navbar-default navbar-fixed-top" role="navigation"> 
 			  <form accept-charset="UTF-s8" action="/results" method="post">
 			    <!-- <label for="movie">Search for:</label> -->
 			    <input id="movie" name="movie" type="text" placeholder="search for any movie" />
 			    <!-- <input name="commit" type="submit" value="Search" />  -->
 			  </form>
-			</nav>  
+			</nav> 
 		</div>
+
 		<!-- yield takes you to index.erb -->
 		<%= yield %>
 	</body>
