--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -87,7 +87,7 @@ input[type="text"]:focus  {
   background: rgba(29,54,87,1);
 }
 
-a {
+.display {
 	color: white;
 	text-decoration: none;	
   font-size: 1em;
