--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,7 @@
 		<title>Search For a Movie</title>
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	</head>
 
 	<body>
