--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,18 +7,23 @@
 		<title>Search For a Movie</title>
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	</head>
 
 	<body>
 		<div class="container">
-			<nav class="navbar navbar-default navbar-fixed-top" role="navigation"> 
-			  <form accept-charset="UTF-s8" action="/results" method="post">
-			    <!-- <label for="movie">Search for:</label> -->
-			    <input id="movie" name="movie" type="text" placeholder="search for any movie" />
-			    <!-- <input name="commit" type="submit" value="Search" />  -->
-			  </form>
-			</nav> 
+			<div class"row navbar-row">
+				<div class= "col-xs-12 col-sm-12" id="col-big">
+				<div class =" col-md-12 col-lg-12" id="col-small">	
+					<nav class="navbar navbar-default navbar-fixed-top" role="navigation"> 
+					  <form accept-charset="UTF-s8" action="/results" method="post">
+					    <input id="movie" name="movie" type="text" placeholder="search for any movie" />
+					  </form>
+					</nav> 
+				</div>	
+				</div>
+			</div>
 		</div>
 
 		<!-- yield takes you to index.erb -->
