--- a/views/results.erb
+++ b/views/results.erb
@@ -1,23 +1,22 @@
 <!-- views/results.erb -->
-<div >
-	<div class="results">
-		<div class="row">
-			<div class="container">
-				<% @sorted_result.each do |movie| %>
-				
-				<div class="col-xs-12 col-sm-6 col-md-4 ">
-
-					<div class="display poster"><img src='<%= movie['Poster']%>' class="img-responsive" alt="Responsive image"></div>
-					<div class="display title"><%= movie['Title']%></div>
-					<div class="display year"><%= movie['Year']%></div>
-					<div class="display director"><%= movie['Director']%></div>
-					<div class="display actors"><%= movie['Actors']%></div>
-					<div class="display plot"><%= movie['Plot']%></div>
-
-				</div>
-
-				<% end %>
+<div class="container results">
+	<div class="row result-row">
+		<% @sorted_result.each do |movie| %>
+		
+		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 each-movie">
+		<a href="/imdbid/<%= movie['imdbID']%>">	
+			<div class= "col-xs-6 col-sm-6 col-md-6 col-lg-6">	
+				<div class="display poster"><img src='<%= movie['Poster']%>' class="img-responsive" alt="Responsive image"></div>
 			</div>
+			<div class= "col-xs-6 col-sm-6 col-md-6 col-lg-6">	
+				<div class="display title_year"><%= movie['Title']%> (<%= movie['Year']%>)</div>
+				<div class="display director">Director: <%= movie['Director']%></div>
+				<div class="display actors">Stars: <%= movie['Actors']%></div>
+				<div class="display plot"><%= movie['Plot']%></div>
+			</div>
+		</a>
 		</div>
+
+		<% end %>
 	</div>
 </div>
