--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -50,27 +50,29 @@ table {
 
 /*  ALL  */
 
-body, html, .container-fluid	{
-	height: 100%;
-  width: 100%;
-
+html{
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 400;
+  font
 }
+
 
 /*  SEARCH  */
 .navbar-fixed-top {
   text-align: center;
-  background-color: white;
-  border-color: white;
+  background-color: rgba(255,255,255,0.9);
+  border: 0;
   height: 230px;
 }
 
 input[type="text"]  {
   color: gray;
   text-align: left;
-  font-size: 4em; 
+  font-size: 2.8em; 
   padding: 10px;
   border: 0;
   margin-top: 100px;
+  background-color: rgba(255,255,255,0)
   
 }
 
@@ -79,12 +81,24 @@ input[type="text"]:focus  {
   color: rgba(100,182,237,1)
 }
 
+/*Why are these classes not working:*/
+#col-big {
+  font-size: 3em;
+}
+
+#col-small {
+  font-size: .5em;
+}
+
 /*  RESULTS  */
+
 .results	{
-  padding-top: 250px;
-  height:100%;
+  height: 100%;
   width: 100%;
+  padding-top: 230px;
   background: rgba(29,54,87,1);
+  font-family: 'Helvetica', sans-serif;
+  font-weight: 300;
 }
 
 .display {
@@ -93,3 +107,16 @@ input[type="text"]:focus  {
   font-size: 1em;
   padding: 10px;
 }
+
+.result-row  {
+  padding-top: 100px
+}
+.each-movie:hover {
+  background-color: rgba(255,255,255,0.3) ;
+}
+
+.each-movie {
+  max-height: 400px;
+  min-height: 400px;
+}
+
