--- a/views/layout.erb
+++ b/views/layout.erb
@@ -28,20 +28,8 @@
 				        <li class="dropdown">
 				            <a href="#" data-toggle="dropdown" class="dropdown-toggle">Titles <b class="caret"></b></a>
 				            <ul class="dropdown-menu">
-				                <li><a href="#">Titles</a></li>
-				                <li><a href="#">Directos</a></li>
-				                <li><a href="#">Actors Items</a></li>
-				                <li class="divider"></li>
-				                <li><a href="#">Trash</a></li>
-				            </ul>
-				        </li>
-				        <li class="dropdown pull-right">
-				            <a href="#" data-toggle="dropdown" class="dropdown-toggle">Admin <b class="caret"></b></a>
-				            <ul class="dropdown-menu">
-				                <li><a href="#">Action</a></li>
-				                <li><a href="#">Another action</a></li>
-				                <li class="divider"></li>
-				                <li><a href="#">Settings</a></li>
+				                <li><a href="/results/title">Title</a></li>
+				                <li><a href="/results/<%= @search_str%>>">Year</a></li>
 				            </ul>
 				        </li>
 				    </ul>
