--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,9 +8,9 @@
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
 		<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
 		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 	</head>
 
 	<body>
@@ -24,7 +24,7 @@
 					  </form>
 					<!--  **** dropdown button **** -->
 
-					<ul class="nav nav-pills">
+					<!-- <ul class="nav nav-pills">
 				        <li class="dropdown">
 				            <a href="#" data-toggle="dropdown" class="dropdown-toggle">Titles <b class="caret"></b></a>
 				            <ul class="dropdown-menu">
@@ -32,7 +32,7 @@
 				                <li><a href="/results/<%= @search_str%>>">Year</a></li>
 				            </ul>
 				        </li>
-				    </ul>
+				    </ul> -->
 
 					</nav> 
 				</div>	
