--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,10 +17,10 @@
 		<div class="container">
 			<div class"row navbar-row">
 				<div class= "col-xs-12 col-sm-12" id="col-small">
-				<div class =" col-md-12 col-lg-12" id="col-big">	
+				<div class =" col-md-12 col-lg-12" id="col-big">
 					<nav class="navbar navbar-default navbar-fixed-top" role="navigation"> 
 					  <form accept-charset="UTF-s8" action="/results" method="post">
-					    <input id="movie" name="movie" type="text" placeholder="search for any movie" />
+					    <input id="movie" name="movie" type="text" placeholder="search for any movie" autofocus />
 					  </form>
 					<!--  **** dropdown button **** -->
 
