--- a/views/results.erb
+++ b/views/results.erb
@@ -2,6 +2,8 @@
 <div class="container results">
 	<div class="row result-row">
 		<% @sorted_result.each do |movie| %>
+
+		<div class="container movie-container">
 		
 		<% if movie['Poster'] == "N/A" %>
 
